--- a/content/modules/ROOT/examples/bgd-app.yaml
+++ b/content/modules/ROOT/examples/bgd-app.yaml
@@ -4,7 +4,7 @@ metadata:
   name: bgd-app
 spec:
   destination:
-    namespace: digital-bgd
+    namespace: user1-bgd
     server: https://kubernetes.default.svc
   project: default
   source:
