new values path

--- a/content/modules/ROOT/examples/bgd-app-helm-custom.yaml
+++ b/content/modules/ROOT/examples/bgd-app-helm-custom.yaml
@@ -12,7 +12,7 @@ spec:
     targetRevision: main
     helm:
       valueFiles:
-        - custom_values_1/values.yaml
+        - envs/dev/values.yaml
   sources: []
   project: default
   syncPolicy:
